06-mysql/mysql-operator/mysql-orchestrator-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: mysql-orchestrator
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
  namespace: mysql-operator
spec:
  tls:
    - hosts:
        - mysql-orchestrator.phpbenelux.plgrnd.be
  rules:
    - host: mysql-orchestrator.phpbenelux.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: mysql-operator-0-svc
              servicePort: 80
